@@ -7,6 +7,7 @@ import com.todoc.server.common.enumeration.Gender;
 import com.todoc.server.common.util.DateTimeUtils;
 import com.todoc.server.common.util.ImageUrlUtils;
 import com.todoc.server.common.util.JsonUtils;
+import com.todoc.server.domain.escort.repository.dto.ApplicationFlatDto;
 import com.todoc.server.domain.helper.entity.Certificate;
 import com.todoc.server.domain.helper.entity.HelperProfile;
 import com.todoc.server.domain.helper.exception.HelperProfileAreaInvalidException;
@@ -59,7 +60,7 @@ public class HelperService {
     public HelperSimpleResponse buildHelperSimpleByHelperProfileId(List<HelperSimpleFlatDto> applicationFlatDtoList) {
 
         // 1. 필드 추출
-        HelperSimpleFlatDto first = applicationFlatDtoList.getFirst();
+        HelperSimpleFlatDto first = applicationFlatDtoList.get(0);
         Long helperProfileId = first.getHelperProfileId();
         String name = first.getName();
         LocalDate birthDate = first.getBirthDate();
@@ -129,7 +130,7 @@ public class HelperService {
             throw new HelperProfileNotFoundException();
         }
 
-        HelperUpdateDefaultFlatDto first = list.getFirst();
+        HelperUpdateDefaultFlatDto first = list.get(0);
         HelperProfile helperProfile = first.getHelperProfile();
         ImageFile profileImage = helperProfile.getHelperProfileImage();
         String strength = helperProfile.getStrength();
